--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "zone.js": "0.8.5"
   },
   "devDependencies": {
+    "@angular/cli": "^1.1.3",
     "@angular/compiler-cli": "~4.0.3",
     "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "2.5.45",
@@ -104,8 +105,8 @@
     "awesome-typescript-loader": "~3.1.2",
     "codelyzer": "~2.1.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
     "cross-env": "^5.0.0",
+    "css-loader": "^0.28.0",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "~2.1.0",
